# MAVSDK

examples/battery/: battery.cpp
examples/fly_qgc_mission/: test_mission.plan
myexamples/dig_twin_mission/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dig_twin_mission.cpp  mavsdk_helper.cpp  mavsdk_helper.h
myexamples/dig_twin_offboard/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dig_twin_offboard.cpp
